--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: Roboto, sans-serif;
-  background-color: #585CB6;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
   display: flex;
   flex-direction: column;
   align-items: center;
